devops/kubernetes/kartezy-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kartezy
  labels:
    name: kartezy
    environment: production
